--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <h1> Jennifer's Portfolio</h1>
-    <img src="./biopic.JPG" width="500" height="1000"/>
+    <img src="./biopic.JPG"/>
 </html>
