--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <h1> Jennifer's Portfolio</h1>
-    <img src="./biopic.JPG"/>
+    <img src="./biopic.JPG" width="498" height="640"/>
 </html>
