--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
 <html>
-    <h1> Jennifer's Portfolio</h1>
-    <img src="./biopic.JPG" width="498" height="640"/>
+<body>
+
+<h1>About Me</h1>
+<img src="./biopic.JPG"/>
+
+<p>I'm Jennifer. I'm a versatile professional with over 15 years of experience in writing and editing, specializing in technical communication and training. Currently transitioning into full-stack development, I bring strong project management and team leadership skills to my new role. I'm passionate about crafting accessible digital experiences and solving complex problems through code. Connect with me on LinkedIn and explore my projects on GitHub. Feel free to reach out for collaborations or discussions; the best way to contact me is through LinkedIn messaging.</p>
+
+   <p><a href="https://www.linkedin.com/in/jennifer-eldridge-69506ba6/">LinkedIn Profile</a></p>
+    
+    <p><a href="https://jnnfrjnnfr.github.io/">GitHub</a></p>
+
+</body>
 </html>
