--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
                     <div class="col-lg-4 ms-auto"><p class="lead">I'm a versatile professional with over 15 years of experience in writing and editing, specializing in technical
                         communication and training. Currently transitioning into full-stack development, I bring strong project management and
                         team leadership skills to my new role. I'm passionate about crafting accessible digital experiences and solving complex
-                        problems through code.</p></div>
-                    <div class="col-lg-4 me-auto"><p class="lead">Connect with me on Linkedln and explore my projects on GitHub. Feel free to reach out for
-                        collaborations or discussions; the best way to contact me is through Linkedln messaging.</p></div>
+                        problems through code.Connect with me on Linkedln and explore my projects on GitHub. Feel free to reach out for collaborations 
+                        or discussions; the best way to contact me is through Linkedln messaging or the form below.</p></div>
+                    <div class="col-lg-4 me-auto"><p class="lead"> <iframe width="560" height="315" src="https://www.youtube.com/embed/3r6jl_fbaKs?si=cbIaknH806z_q3Dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p></div>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
